unpackaged/main/default/objects/WOA__c/WOA__c.object-meta.xml
<CustomObject>
    <label>WOA</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>WOA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>