unpackaged/main/default/objects/WOA__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Assessor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>WOAs</relationshipName>
    <type>Lookup</type>
</CustomField>