unpackaged/main/default/objects/WOA__c/fields/CompletingWOA__c.field-meta.xml
<CustomField>
    <fullName>CompletingWOA__c</fullName>
    <description>Are you able to complete a welfare outcome form for this visit?</description>
    <inlineHelpText>Are you able to complete a welfare outcome form for this visit?</inlineHelpText>
    <label>CompletingWOA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>