unpackaged/main/default/objects/WOA__c/fields/FF_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>FF_Reg_No__c</fullName>
    <formula>Application__r.Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF Reg No</label>
    <type>Text</type>
</CustomField>