unpackaged/main/default/objects/WOA__c/fields/Form_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Completion_Date__c</fullName>
    <label>WOA Submission Date</label>
    <type>Date</type>
</CustomField>