unpackaged/main/default/objects/WOA__c/fields/Houses__c.field-meta.xml
<CustomField>
    <fullName>Houses__c</fullName>
    <label>Houses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>