unpackaged/main/default/objects/WOA__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted</label>
    <type>Checkbox</type>
</CustomField>