unpackaged/main/default/objects/WOA__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <formula>Application__r.Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer</label>
    <type>Text</type>
</CustomField>