unpackaged/main/default/objects/WOA__c/fields/Species_Type__c.field-meta.xml
<CustomField>
    <fullName>Species_Type__c</fullName>
    <label>Species Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dairy Cattle</fullName>
            </value>
            <value>
                <fullName>Laying Hen</fullName>
            </value>
            <value>
                <fullName>Pigs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>