unpackaged/main/default/objects/WOA__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSPCA Assured</fullName>
            </value>
            <value>
                <fullName>RSPCA Monitoring</fullName>
            </value>
            <value>
                <fullName>Freedom Food</fullName>
                <isActive>false</isActive>
                <label>Freedom Food</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>