unpackaged/main/default/objects/WOA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>FF_Reg_No__c</columns>
    <columns>Producer__c</columns>
    <columns>Species_Type__c</columns>
    <columns>Assessor__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>IsCompleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>